src/test/ui/traits/multidispatch-bad.stderr
error[E0308]: mismatched types
  --> $DIR/multidispatch-bad.rs:19:17
   |
LL |     test(22i32, 44i32);
   |                 ^^^^^ expected `u32`, found `i32`
   |
help: change the type of the numeric literal from `i32` to `u32`
   |
LL |     test(22i32, 44u32);
   |                   ~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
